<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prevMonth"
            android:id="@+id/preMonth" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yearMonth"
            android:text="TextView"
            android:layout_centerHorizontal="true"
            android:textSize="24sp"
            android:layout_centerVertical="true"/>

        <Button
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextMonth"
            android:id="@+id/nextMonth" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1"
        android:paddingLeft="3dp"
        android:paddingRight="3dp">


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableRow1">

            <TextView
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/sunday"
                android:id="@+id/Sunday"
                android:background="@color/tomato">
            </TextView>

            <TextView
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/monday"
                android:id="@+id/Monday"
                android:background="@color/gray">
            </TextView>

            <TextView
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/tuesday"
                android:id="@+id/Tuesday"
                android:background="@color/gray">
            </TextView>

            <TextView
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/wednesday"
                android:id="@+id/Wednesday"
                android:background="@color/gray">
            </TextView>

            <TextView
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/thursday"
                android:id="@+id/Thursday"
                android:background="@color/gray">
            </TextView>

            <TextView
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/friday"
                android:id="@+id/Friday"
                android:background="@color/gray">
            </TextView>

            <TextView
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/saturday"
                android:id="@+id/Saturday"
                android:background="@color/royalBlue">
            </TextView>
        </TableRow>
</LinearLayout>

    <GridView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/gridView1" />

</LinearLayout>
